argocd/applications/synthesis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synthesis
  namespace: synthesis
spec:
  selector:
    app: synthesis
  ports:
    - name: http
      port: 3000
      targetPort: http
