argocd/applications/synthesis/tailscale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synthesis-tailscale
  namespace: synthesis
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: synthesis
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: synthesis
  ports:
    - name: http
      port: 80
      targetPort: http
